[gd_scene load_steps=4 format=3 uid="uid://di0etxiodob68"]

[ext_resource type="Texture2D" uid="uid://bs2qvq2ydahwh" path="res://addons/imrp/icons/Search.svg" id="1"]
[ext_resource type="Script" path="res://addons/imrp/src/scene/ImprovedResourcePicker.gd" id="2"]
[ext_resource type="Script" path="res://addons/imrp/src/scene/Tree.gd" id="3"]

[node name="ImprovedResourcePicker" type="ConfirmationDialog"]
visible = true
dialog_hide_on_ok = false
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 51.0
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("/root/@@16588/@@655/@@656/@@664/@@667/@@675/@@683/@@684/@@686/@@712/@@713/@@752/MainScreen/@@9351/@@9178/@@9180/@@9182/@@9183/@@9184/@@9185/ImprovedResourcePicker/VBoxContainer/LineEdit")
focus_neighbor_bottom = NodePath("/root/@@16588/@@655/@@656/@@664/@@667/@@675/@@683/@@684/@@686/@@712/@@713/@@752/MainScreen/@@9351/@@9178/@@9180/@@9182/@@9183/@@9184/@@9185/ImprovedResourcePicker/VBoxContainer/LineEdit")
clear_button_enabled = true
right_icon = ExtResource("1")

[node name="Tree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
hide_folding = true
hide_root = true
script = ExtResource("3")

[connection signal="confirmed" from="." to="." method="_on_ExchangedResourcePicker_confirmed"]
[connection signal="custom_action" from="." to="." method="_on_ExchangedResourcePicker_custom_action"]
[connection signal="gui_input" from="VBoxContainer/LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="text_changed" from="VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="item_activated" from="VBoxContainer/Tree" to="." method="_on_Tree_item_activated"]
